[project]
name = "caesar-shift"
version = "0.1.0"
description = "Simple Caesar shift program."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

# Formatter
[tool.ruff.format]
line-ending = "lf"
quote-style = "single"
indent-style = "space"
